# MultiNEAs

./: .gitignore  CONTRIBUTING.md  PACKAGE_STRUCTURE.md  README.md  WHATSNEW.md  makefile  pyproject.toml  requirements.txt  setup.py
dev/: PACKAGE_STRUCTURE.md
docs/: conf.py  index.rst  population.rst  requirements.txt
docs/_build/doctrees/: README.doctree  environment.pickle  examples.doctree  index.doctree  multimin.doctree  orbit.doctree  plot.doctree  population.doctree  util.doctree
docs/_build/doctrees/examples/: multimin_tutorial.doctree  multineas_quickstart.doctree  population_asteroid_tutorial.doctree
docs/_build/html/: .buildinfo  README.html  examples.html  genindex.html  index.html  multimin.html  objects.inv  orbit.html  plot.html  population.html  py-modindex.html  search.html  searchindex.js  util.html
docs/_build/html/_modules/: index.html  numpy.html
docs/_build/html/_sources/: examples.rst.txt  multimin.rst.txt  orbit.rst.txt
docs/_build/html/examples/: multimin_tutorial.html  multimin_tutorial.ipynb  multineas_quickstart.html  (+1 more)
docs/examples/: population_asteroid_tutorial.ipynb
examples/: guide_multimin.ipynb  multimin_tutorial.ipynb  multineas_quickstart.ipynb  orbit_coordinates_tutorial.ipynb  orbit_integration_tutorial.ipynb  population_asteroid_tutorial.ipynb  probability_tutorial.ipynb
examples/data/: fit-NEAS-Ngauss10.pkl
src/multineas/: __init__.py  multimin.py  orbit.py  plot.py  population.py  probability.py  util.py  version.py
src/multineas/data/: README.md  nea_extended_220126.pkl
tests/: __init__.py  test_basic.py
(+7 files in other folders)
