##################################################################
#                                                                #
# MultiNEAs: Numerical tools for near-earth asteroid dynamics   #
#            and population                                      #
#                                                                #
##################################################################
# License: GNU Affero General Public License v3 (AGPL-3.0)        #
##################################################################
[build-system]
requires = ['setuptools', 'numpy', 'scipy', 'matplotlib']
build-backend = "setuptools.build_meta"
